# 1.086_wake_demo

./: .gitignore  README.md  pyproject.toml
src/: example.ipynb  example_sweep_directions.py  figuresettings.py  setup_windfarm.py
