[tool.poetry]
name = "1-086-wake-demo"
version = "0.1.0"
description = ""
authors = ["Kirby <kirby.heck@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
floris = {git = "https://github.com/NREL/floris.git"}
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
